add comments in .env example and update user dir

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,13 @@ TZ=America/Edmonton
 PUID=1000
 PGID=1000
 # The directory where data and configuration will be stored.
-USERDIR=/media/data
+USERDIR=/home/ei9h7/media/data
+
+
+#fstab copy:
+# usb drive
+# UUID=a701ad27-a24e-4c53-85f7-eeca4ede86ad /media/data ext4 defaults 0 0
+
+# smb
+# //$SERVER/$SHARE $MOUNTPOINT $FS_TYPE credentials=$SMB_CREDENTIALS,uid=$UID,g>
+
