update fstab example

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ USERDIR=/home/ei9h7/media/data
 
 #fstab copy:
 # usb drive
-# UUID=a701ad27-a24e-4c53-85f7-eeca4ede86ad /media/data ext4 defaults 0 0
+# UUID=a701ad27-a24e-4c53-85f7-eeca4ede86ad /media/data ext4 nofail,uid=ei9h7,gid=ei9h7   0   0
 
 # smb
 # //$SERVER/$SHARE $MOUNTPOINT $FS_TYPE credentials=$SMB_CREDENTIALS,uid=$UID,g>
